[package]
name = "whatsonproject"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "whatson"
path = "src/main.rs"

[dependencies]
git2 = { version = "0.17.1", default-features = false }
regex = "1.8.1"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "1.0.163", features = ["derive"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"